--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
       <a href="#" class="header__lang-link">En</a>
     </div>
   </header>
-  <section>
-    <!-- <h1>Путешествие по России</h1> -->
+  <section class="lead">
+    <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+    <h2 class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</h2>
+    <img class="lead__image" src="./images/lead__image.png" alt="Фото человека в купе с наложенным поверх маршрутом" >
+    <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
   </section>
 </body>
 
