--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </header>
   <section class="lead">
     <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-    <h2 class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</h2>
+    <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
     <img class="lead__image" src="./images/lead__image.png" alt="Фото человека в купе с наложенным поверх маршрутом" >
     <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
   </section>
