block photo-grid added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
 
   <section class="info">
     <h2 class="info__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
-    <p class="info__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+    <p class="info__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести
+      отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым
+      морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов
+      на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая
+      взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
+      описали некоторые интересные места, достойные вашего отпуска.</p>
     <ul class="info__list">
       <li><span class="info_list-item_bold">Часовых поясов</span> 11</li>
       <li><span class="info_list-item_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
@@ -58,6 +63,21 @@
       <li><span class="info_list-item_bold">Природных заповедников</span> 105</li>
       <li><span class="info_list-item_bold">Аэропортов</span> 241</li>
     </ul>
+  </section>
+
+  <section class="photo-grid">
+    <img src="./images/__item-1.png" alt="Фото из окна поезда" class="photo-grid__item-1">
+    <img src="./images/__item-2.png" alt="Фото пейзажа снежных гор" class="photo-grid__item-2">
+    <img src="./images/__item-3.png" alt="Фото закатного поля со стогом сена" class="photo-grid__item-3">
+    <img src="./images/__item-4.png" alt="Фото туманного леса" class="photo-grid__item-4">
+    <img src="./images/__item-5.png" alt="Фото льда Байкала" class="photo-grid__item-5">
+    <img src="./images/__item-6.png" alt="Фото морского побережья" class="photo-grid__item-6">
+    <img src="./images/__item-7.png" alt="Фото горных пиков" class="photo-grid__item-7">
+    <img src="./images/__item-8.png" alt="Фото морских заграждений" class="photo-grid__item-8">
+    <img src="./images/__item-9.png" alt="Фото гор в облаках" class="photo-grid__item-9">
+    <img src="./images/__item-10.png" alt="Фото мшистой горы" class="photo-grid__item-10">
+    <img src="./images/__item-11.png" alt="Фото зимнего обрыва" class="photo-grid__item-11">
+    <img src="./images/__item.png" alt="Фото туманных гор" class="photo-grid__item-11">
   </section>
 
 </body>
