Update block photo-grid

--- a/index.html
+++ b/index.html
@@ -66,18 +66,20 @@
   </section>
 
   <section class="photo-grid">
-    <img src="./images/__item-1.png" alt="Фото из окна поезда" class="photo-grid__item-1">
-    <img src="./images/__item-2.png" alt="Фото пейзажа снежных гор" class="photo-grid__item-2">
-    <img src="./images/__item-3.png" alt="Фото закатного поля со стогом сена" class="photo-grid__item-3">
-    <img src="./images/__item-4.png" alt="Фото туманного леса" class="photo-grid__item-4">
-    <img src="./images/__item-5.png" alt="Фото льда Байкала" class="photo-grid__item-5">
-    <img src="./images/__item-6.png" alt="Фото морского побережья" class="photo-grid__item-6">
-    <img src="./images/__item-7.png" alt="Фото горных пиков" class="photo-grid__item-7">
-    <img src="./images/__item-8.png" alt="Фото морских заграждений" class="photo-grid__item-8">
-    <img src="./images/__item-9.png" alt="Фото гор в облаках" class="photo-grid__item-9">
-    <img src="./images/__item-10.png" alt="Фото мшистой горы" class="photo-grid__item-10">
-    <img src="./images/__item-11.png" alt="Фото зимнего обрыва" class="photo-grid__item-11">
-    <img src="./images/__item.png" alt="Фото туманных гор" class="photo-grid__item-11">
+    <ul class="photo-grid__list">
+      <li><img src="./images/__item-1.png" alt="Фото из окна поезда" class="photo-grid__item photo-grid__item-1"></li>
+      <li><img src="./images/__item-2.png" alt="Фото пейзажа снежных гор" class="photo-grid__item photo-grid__item-2"></li>
+      <li><img src="./images/__item-3.png" alt="Фото закатного поля со стогом сена" class="photo-grid__item photo-grid__item-3"></li>
+      <li><img src="./images/__item-4.png" alt="Фото туманного леса" class="photo-grid__item photo-grid__item-4"></li>
+      <li><img src="./images/__item-5.png" alt="Фото льда Байкала" class="photo-grid__item photo-grid__item-5"></li>
+      <li><img src="./images/__item-6.png" alt="Фото морского побережья" class="photo-grid__item photo-grid__item-6"></li>
+      <li><img src="./images/__item-7.png" alt="Фото горных пиков" class="photo-grid__item photo-grid__item-7"></li>
+      <li><img src="./images/__item-8.png" alt="Фото морских заграждений" class="photo-grid__item photo-grid__item-8"></li>
+      <li><img src="./images/__item-9.png" alt="Фото гор в облаках" class="photo-grid__item photo-grid__item-9"></li>
+      <li><img src="./images/__item-10.png" alt="Фото мшистой горы" class="photo-grid__item photo-grid__item-10"></li>
+      <li><img src="./images/__item-11.png" alt="Фото зимнего обрыва" class="photo-grid__item photo-grid__item-11"></li>
+      <li><img src="./images/__item.png" alt="Фото туманных гор" class="photo-grid__item photo-grid__item-11"></li>
+    </ul>
   </section>
 
 </body>
