--- a/index.html
+++ b/index.html
@@ -68,13 +68,17 @@
   <section class="photo-grid">
     <ul class="photo-grid__list">
       <li><img src="./images/__item-1.png" alt="Фото из окна поезда" class="photo-grid__item photo-grid__item-1"></li>
-      <li><img src="./images/__item-2.png" alt="Фото пейзажа снежных гор" class="photo-grid__item photo-grid__item-2"></li>
-      <li><img src="./images/__item-3.png" alt="Фото закатного поля со стогом сена" class="photo-grid__item photo-grid__item-3"></li>
+      <li><img src="./images/__item-2.png" alt="Фото пейзажа снежных гор" class="photo-grid__item photo-grid__item-2">
+      </li>
+      <li><img src="./images/__item-3.png" alt="Фото закатного поля со стогом сена"
+          class="photo-grid__item photo-grid__item-3"></li>
       <li><img src="./images/__item-4.png" alt="Фото туманного леса" class="photo-grid__item photo-grid__item-4"></li>
       <li><img src="./images/__item-5.png" alt="Фото льда Байкала" class="photo-grid__item photo-grid__item-5"></li>
-      <li><img src="./images/__item-6.png" alt="Фото морского побережья" class="photo-grid__item photo-grid__item-6"></li>
+      <li><img src="./images/__item-6.png" alt="Фото морского побережья" class="photo-grid__item photo-grid__item-6">
+      </li>
       <li><img src="./images/__item-7.png" alt="Фото горных пиков" class="photo-grid__item photo-grid__item-7"></li>
-      <li><img src="./images/__item-8.png" alt="Фото морских заграждений" class="photo-grid__item photo-grid__item-8"></li>
+      <li><img src="./images/__item-8.png" alt="Фото морских заграждений" class="photo-grid__item photo-grid__item-8">
+      </li>
       <li><img src="./images/__item-9.png" alt="Фото гор в облаках" class="photo-grid__item photo-grid__item-9"></li>
       <li><img src="./images/__item-10.png" alt="Фото мшистой горы" class="photo-grid__item photo-grid__item-10"></li>
       <li><img src="./images/__item-11.png" alt="Фото зимнего обрыва" class="photo-grid__item photo-grid__item-11"></li>
@@ -82,6 +86,63 @@
     </ul>
   </section>
 
+  <section class="places">
+    <div class="place">
+      <h2 class="place__title">Куршская коса</h2>
+      <img src="./images/place-1_image.png" alt="Фото чистого прибрежья с пеньками деревьев" class="place__image">
+      <div class="place__website">
+      <p class="place__url-heading">url</p>
+      <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+      </div>
+      <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта &mdash;
+      спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная
+      природная зона на&nbsp;краю российского анклава.</p>
+      <p class="place__paragraph-two">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и
+      исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи
+      небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах
+      стального, прохладного моря.</p>
+      </div>
+      <div class="place">
+      <h2 class="place__title">Кольский</h2>
+      <img src="./images/place-2_image.png" alt="Фото снежного и горного побережья" class="place__image">
+      <div class="place__website">
+      <p class="place__url-heading">url</p>
+      <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+      </div>
+      <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+      <p class="place__paragraph-two">Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю арктического фестиваля в&nbsp;Териберке. Возможно, слово &laquo;Хибины&raquo; не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы&nbsp;не&nbsp;интересовались пронизывающей земную кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.</p>
+      </div>
+      <div class="place">
+      <h2 class="place__title">Алтай</h2>
+      <img src="./images/place-3_image.png" alt="Фото ноутбука на террасе с зарослями леса на заднем плане" class="place__image">
+      <div class="place__website">
+      <p class="place__url-heading">url</p>
+      <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
+      </div>
+      <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
+      В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест&nbsp;&mdash; горным воздухом.</p>
+      <p class="place__paragraph-two">Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского края.</p>
+      </div>
+      <div class="place">
+      <h2 class="place__title">Зимний Байкал</h2>
+      <img src="./images/place-4_image.png" alt="Крупное фото чистого потрескавшегося льда озера" class="place__image">
+      <div class="place__website">
+      <p class="place__url-heading">url</p>
+      <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+      </div>
+      <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что это самый большой источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
+      <p class="place__paragraph-two">Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем старается развить как можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.</p>
+      </div>
+      <div class="place">
+      <h2 class="place__title">Карелия</h2>
+      <img src="./images/place-5_image.png" alt="Пейзаж утренней реки окруженной хвойным лесом" class="place__image">
+      <div class="place__website">
+      <p class="place__url-heading">url</p>
+      <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+      </div>
+      <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+      </div>
+  </section>
 </body>
 
 </html>
