--- a/index.html
+++ b/index.html
@@ -161,21 +161,29 @@
         <p class="place__url-heading">url</p>
         <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
       </div>
-      <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу
-        сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает
-        на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда
-        не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу,
-        видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров
-        не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены
-        медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+      <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
     </div>
   </section>
 
-  <section class="cover">
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
-      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
-      </p>
-  </section>
+
+    <a class="cover-link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+      <section class="cover">
+        <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.
+        </p>
+      </section>
+    </a>
+
+  <footer class="footer">
+    <div class="footer__links">
+      <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+      <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+      <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+      <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+      <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+    </div>
+    <p class="footer__copyright">© 2023. Иван Малиновский</p>
+  </footer>
 </body>
 
 </html>
