--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
   <section class="lead">
     <h1 class="lead__title">Путешествия по&nbsp;России</h1>
     <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
-    <img class="lead__image" src="./images/lead__image.png" alt="Фото человека в купе с наложенным поверх маршрутом">
+    <img class="lead__image" src="./images/lead__image.png" alt="Фото человека в на нижней боковой полке с наложенным поверх маршрутом">
     <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
   </section>
 
-  <section class="info">
+  <!-- <section class="info">
     <h2 class="info__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
     <p class="info__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести
       отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым
@@ -84,9 +84,9 @@
       <li><img src="./images/__item-11.png" alt="Фото зимнего обрыва" class="photo-grid__item photo-grid__item-11"></li>
       <li><img src="./images/__item.png" alt="Фото туманных гор" class="photo-grid__item photo-grid__item-11"></li>
     </ul>
-  </section>
+  </section> -->
 
-  <section class="places">
+  <!-- <section class="places">
     <div class="place">
       <h2 class="place__title">Куршская коса</h2>
       <img src="./images/place-1_image.png" alt="Фото чистого прибрежья с пеньками деревьев" class="place__image">
@@ -161,20 +161,27 @@
         <p class="place__url-heading">url</p>
         <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
       </div>
-      <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+      <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу
+        сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает
+        на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных парков из-за непроходимых болот никогда
+        не&nbsp;знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к&nbsp;живому существу,
+        видевшему солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров
+        не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в&nbsp;паре метров от&nbsp;земли помечены
+        медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
     </div>
   </section>
 
 
-    <a class="cover-link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-      <section class="cover">
-        <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
-        <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.
-        </p>
-      </section>
-    </a>
+  <a class="cover-link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+    <section class="cover">
+      <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+      <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы
+        до&nbsp;Байкала на&nbsp;электричках.
+      </p>
+    </section>
+  </a> -->
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="footer__links">
       <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
       <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
@@ -183,7 +190,7 @@
       <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
     </div>
     <p class="footer__copyright">© 2023. Иван Малиновский</p>
-  </footer>
+  </footer> -->
 </body>
 
 </html>
