--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
   </section>
 
-  <!-- <section class="info">
+  <section class="info">
     <h2 class="info__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
     <p class="info__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести
       отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым
@@ -67,26 +67,25 @@
 
   <section class="photo-grid">
     <ul class="photo-grid__list">
-      <li><img src="./images/__item-1.png" alt="Фото из окна поезда" class="photo-grid__item photo-grid__item-1"></li>
-      <li><img src="./images/__item-2.png" alt="Фото пейзажа снежных гор" class="photo-grid__item photo-grid__item-2">
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-1.png" alt="Фото из окна поезда"></li>
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-2.png" alt="Фото пейзажа снежных гор">
       </li>
-      <li><img src="./images/__item-3.png" alt="Фото закатного поля со стогом сена"
-          class="photo-grid__item photo-grid__item-3"></li>
-      <li><img src="./images/__item-4.png" alt="Фото туманного леса" class="photo-grid__item photo-grid__item-4"></li>
-      <li><img src="./images/__item-5.png" alt="Фото льда Байкала" class="photo-grid__item photo-grid__item-5"></li>
-      <li><img src="./images/__item-6.png" alt="Фото морского побережья" class="photo-grid__item photo-grid__item-6">
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-3.png" alt="Фото закатного поля со стогом сена"></li>
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-4.png" alt="Фото туманного леса"></li>
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-5.png" alt="Фото льда Байкала"></li>
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-6.png" alt="Фото морского побережья">
       </li>
-      <li><img src="./images/__item-7.png" alt="Фото горных пиков" class="photo-grid__item photo-grid__item-7"></li>
-      <li><img src="./images/__item-8.png" alt="Фото морских заграждений" class="photo-grid__item photo-grid__item-8">
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-7.png" alt="Фото горных пиков"></li>
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-8.png" alt="Фото морских заграждений">
       </li>
-      <li><img src="./images/__item-9.png" alt="Фото гор в облаках" class="photo-grid__item photo-grid__item-9"></li>
-      <li><img src="./images/__item-10.png" alt="Фото мшистой горы" class="photo-grid__item photo-grid__item-10"></li>
-      <li><img src="./images/__item-11.png" alt="Фото зимнего обрыва" class="photo-grid__item photo-grid__item-11"></li>
-      <li><img src="./images/__item.png" alt="Фото туманных гор" class="photo-grid__item photo-grid__item-11"></li>
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-9.png" alt="Фото гор в облаках"></li>
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-10.png" alt="Фото мшистой горы"></li>
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item-11.png" alt="Фото зимнего обрыва"></li>
+      <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/__item.png" alt="Фото туманных гор"></li>
     </ul>
-  </section> -->
+  </section>
 
-  <!-- <section class="places">
+  <section class="places">
     <div class="place">
       <h2 class="place__title">Куршская коса</h2>
       <img src="./images/place-1_image.png" alt="Фото чистого прибрежья с пеньками деревьев" class="place__image">
@@ -179,7 +178,7 @@
         до&nbsp;Байкала на&nbsp;электричках.
       </p>
     </section>
-  </a> -->
+  </a>
 
   <!-- <footer class="footer">
     <div class="footer__links">
