--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
       <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
     </section>
 
-    <section class="info">
-      <h2 class="info__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
-      <p class="info__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести
+    <section class="intro">
+      <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести
         отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым
         морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов
         на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая
         взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и
         описали некоторые интересные места, достойные вашего отпуска.</p>
-      <ul class="info__list">
-        <li><span class="info_list-item_bold">Часовых поясов</span> 11</li>
-        <li><span class="info_list-item_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
-        <li><span class="info_list-item_bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-        <li><span class="info_list-item_bold">Природных заповедников</span> 105</li>
-        <li><span class="info_list-item_bold">Аэропортов</span> 241</li>
+      <ul class="intro__list">
+        <li><span class="intro__list_parameter">Часовых поясов</span> 11</li>
+        <li><span class="intro__list_parameter">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li><span class="intro__list_parameter">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li><span class="intro__list_parameter">Природных заповедников</span> 105</li>
+        <li><span class="intro__list_parameter">Аэропортов</span> 241</li>
       </ul>
     </section>
 
