--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
         d="M171.651 41.0004H176V27.9095H169.884C166.12 27.9095 163.742 29.8186 163.767 32.4777C163.75 33.9692 164.642 35.205 166.205 35.9379L163.631 41.0004H167.947L170.147 36.6709H171.651V41.0004ZM171.651 33.8414H169.986C168.737 33.8414 168.159 33.2277 168.185 32.6482C168.159 32.1027 168.703 31.4209 169.884 31.4209H171.651V33.8414Z"
         fill="white" />
     </svg>
-    <div class="header__lang-links">
-      <a href="#" class="header__lang-link">Ru</a>
-      <a href="#" class="header__lang-link">En</a>
-    </div>
+    <ul class="header__lang-list">
+      <li class="header__lang-item">
+        <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+      </li>
+      <li class="header__lang-item">
+        <a href="#" class="header__lang-link">En</a>
+      </li>
+    </ul>
   </header>
 
   <main class="content">
