--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
       <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
       <img class="lead__image" src="./images/lead__image.png"
-        alt="Фото человека в на нижней боковой полке с наложенным поверх маршрутом">
+        alt="Фото человека на нижней боковой полке с наложенным поверх маршрутом">
       <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
     </section>
 
@@ -76,32 +76,32 @@
 
     <section class="photo-grid">
       <ul class="photo-grid__list">
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-1.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-1.png"
             alt="Фото из окна поезда"></li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-2.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-2.png"
             alt="Фото пейзажа снежных гор">
         </li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-3.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-3.png"
             alt="Фото закатного поля со стогом сена"></li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-4.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-4.png"
             alt="Фото туманного леса"></li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-5.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-5.png"
             alt="Фото льда Байкала"></li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-6.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-6.png"
             alt="Фото морского побережья">
         </li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-7.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-7.png"
             alt="Фото горных пиков"></li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-8.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-8.png"
             alt="Фото морских заграждений">
         </li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-9.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-9.png"
             alt="Фото гор в облаках"></li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-10.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-10.png"
             alt="Фото мшистой горы"></li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item-11.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item-11.png"
             alt="Фото зимнего обрыва"></li>
-        <li class="photo-grid__item"><img class="photo-grid__item-image" src="./images/grid/__item.png"
+        <li><img class="photo-grid__image" src="./images/grid/__item.png"
             alt="Фото туманных гор"></li>
       </ul>
     </section>
