--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         отпуска.
       </p>
       <ul class="intro__list">
-        <li><span class="intro__list_parameter">Часовых поясов</span> 11</li>
-        <li><span class="intro__list_parameter">Объектов природного наследия ЮНЕСКО</span> 12</li>
-        <li><span class="intro__list_parameter">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-        <li><span class="intro__list_parameter">Природных заповедников</span> 105</li>
-        <li><span class="intro__list_parameter">Аэропортов</span> 241</li>
+        <li><span class="intro__list-parameter">Часовых поясов</span> 11</li>
+        <li><span class="intro__list-parameter">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li><span class="intro__list-parameter">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li><span class="intro__list-parameter">Природных заповедников</span> 105</li>
+        <li><span class="intro__list-parameter">Аэропортов</span> 241</li>
       </ul>
     </section>
 
