--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <article class="place__article">
           <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных
-            горизонта&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского
+            горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского
             моря
             с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
           <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и
