--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
       <p class="lead__subtitle">Настоящая страна не&nbsp;в&nbsp;выпусках новостей, а&nbsp;здесь.</p>
-      <img class="lead__image" src="./images/lead__image.png"
-        alt="Фото человека на нижней боковой полке с наложенным поверх маршрутом">
-      <p class="lead__caption">ваша полка&nbsp;&mdash; верхняя</p>
+      <figure>
+        <picture>
+          <source type="image/webp" srcset="./images/lead__image.webp">
+          <img class="lead__image" src="./images/lead__image.png"
+            alt="Фото человека на нижней боковой полке с наложенным поверх маршрутом">
+        </picture>
+        <figcaption class="lead__caption">ваша полка&nbsp;&mdash; верхняя</figcaption>
+      </figure>
     </section>
 
     <section class="intro">
@@ -77,33 +82,22 @@
 
     <section class="photo-grid">
       <ul class="photo-grid__list">
-        <li><img class="photo-grid__image" src="./images/grid/__item-1.png"
-            alt="Фото из окна поезда"></li>
-        <li><img class="photo-grid__image" src="./images/grid/__item-2.png"
-            alt="Фото пейзажа снежных гор">
+        <li><img class="photo-grid__image" src="./images/grid/__item-1.png" alt="Фото из окна поезда"></li>
+        <li><img class="photo-grid__image" src="./images/grid/__item-2.png" alt="Фото пейзажа снежных гор">
         </li>
-        <li><img class="photo-grid__image" src="./images/grid/__item-3.png"
-            alt="Фото закатного поля со стогом сена"></li>
-        <li><img class="photo-grid__image" src="./images/grid/__item-4.png"
-            alt="Фото туманного леса"></li>
-        <li><img class="photo-grid__image" src="./images/grid/__item-5.png"
-            alt="Фото льда Байкала"></li>
-        <li><img class="photo-grid__image" src="./images/grid/__item-6.png"
-            alt="Фото морского побережья">
+        <li><img class="photo-grid__image" src="./images/grid/__item-3.png" alt="Фото закатного поля со стогом сена">
         </li>
-        <li><img class="photo-grid__image" src="./images/grid/__item-7.png"
-            alt="Фото горных пиков"></li>
-        <li><img class="photo-grid__image" src="./images/grid/__item-8.png"
-            alt="Фото морских заграждений">
+        <li><img class="photo-grid__image" src="./images/grid/__item-4.png" alt="Фото туманного леса"></li>
+        <li><img class="photo-grid__image" src="./images/grid/__item-5.png" alt="Фото льда Байкала"></li>
+        <li><img class="photo-grid__image" src="./images/grid/__item-6.png" alt="Фото морского побережья">
         </li>
-        <li><img class="photo-grid__image" src="./images/grid/__item-9.png"
-            alt="Фото гор в облаках"></li>
-        <li><img class="photo-grid__image" src="./images/grid/__item-10.png"
-            alt="Фото мшистой горы"></li>
-        <li><img class="photo-grid__image" src="./images/grid/__item-11.png"
-            alt="Фото зимнего обрыва"></li>
-        <li><img class="photo-grid__image" src="./images/grid/__item.png"
-            alt="Фото туманных гор"></li>
+        <li><img class="photo-grid__image" src="./images/grid/__item-7.png" alt="Фото горных пиков"></li>
+        <li><img class="photo-grid__image" src="./images/grid/__item-8.png" alt="Фото морских заграждений">
+        </li>
+        <li><img class="photo-grid__image" src="./images/grid/__item-9.png" alt="Фото гор в облаках"></li>
+        <li><img class="photo-grid__image" src="./images/grid/__item-10.png" alt="Фото мшистой горы"></li>
+        <li><img class="photo-grid__image" src="./images/grid/__item-11.png" alt="Фото зимнего обрыва"></li>
+        <li><img class="photo-grid__image" src="./images/grid/__item.png" alt="Фото туманных гор"></li>
       </ul>
     </section>
 
@@ -118,7 +112,8 @@
         </div>
         <article class="place__article">
           <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных
-            горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского
+            горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн
+            Балтийского
             моря
             с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
           <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и
